# VTK-Projects

./: HW03.tar  README.md  h  vtkMyFunction.cxx
FinalProject/: 0917_MRI.nii  0917_pp_A_0073.nii  ADNI_006_S_4153_MR_MPRAGE_br_raw_20130916153400303_44_S200933_I390348.dcm  CMakeCache.txt  CMakeLists.txt  Makefile  ROI_index.txt  cmake_install.cmake  readNII  readNIITest  readNIITest.cxx  readNII_view2  readNII_view2.cxx  readNii.cxx  testCutter.cxx  testRenderAndImage.cxx  utility.h  utility_cutter.h  volumeRender.cxx  w20130827_114820RestingStatefMRIs501a1005_050.nii
HW01/: #testCxx.cxx#  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Callbacl.py  Cone  Cone.cxx  Cone.cxx~  Cylinder_Bottom  Cylinder_Bottom.cxx  Cylinder_Bottom.cxx~  Cylinder_One  Cylinder_One.cxx  Cylinder_One.cxx~  Cylinder_One.py  Cylinder_One.py~  Cylinder_Series  Cylinder_Series.cxx  Cylinder_Series.cxx~  Cylinder_Series.py  Cylinder_Series.py~  Cylinder_Two_Rows.py  DiffuseSpheres  Dynamic.py  Makefile  Normal_1.data  README  cmake_install.cmake  test.py  test.py~
HW02/: #functionC.py#  CMakeCache.txt  CMakeLists.txt  ColoredElevationMap.cxx  Makefile  cmake_install.cmake  cylinderSurface  cylinderSurface.cxx  cylinder_trip.cxx  functionA.py  functionA.py~  functionB.py  functionB.py~  functionC.py
HW02/Modify/: CMakeCache.txt  CMakeLists.txt  ColoredElevationMap  ColoredElevationMap.cxx  Makefile  cmake_install.cmake
HW02/functionC/: CMakeCache.txt  CMakeLists.txt  FunctionC  FunctionC.cxx  Makefile  cmake_install.cmake  vtkMyFunction.h  vtkMyFunction.h~
HW03/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadDICOM  ReadDICOM.cxx  ReadDICOMSeries  cmake_install.cmake
Rendering/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
data/: ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134431890_107_S122024_I255978.dcm  (+99 more)
demo/: #Cylinder_Series.py#  .gitignore  CMakeCache.txt  CMakeList.txt~  CMakeLists.txt  FixedPointVolumeRayCastMapperCT  FunctionC  FunctionC.cxx  FunctionC.cxx~  MRIRender  MRIRender.cxx  Makefile  QuadraticSurface  QuadraticSurface.cxx  ROI_index.txt  ReadDICOM  ReadDICOM.cxx  ReadDICOM.cxx~  ReadDICOMSeries  cmake_install.cmake  cylinderSurface  cylinderUnsmooth  cylinder_trip.cxx~  myInteractorStyle.h  registration_T1.nii  registration_fMRI_0050.nii  test.py  test0050.nii  testContour  testContour.cxx  testCutter  testCutter.cxx  testMRIRender  testMRIRender.cxx  testMapper  testMapper.cxx  testRenderAndImage  testRenderAndImage.cxx  testRenderMRI  testRenderMRI.cxx  (+11 more)
outdated/: CMakeLists.txt  readNII.cxx  readNIITest.cxx  utility.h
tmp/: #test.cxx#  1.py  1.py~  2.py  2.py~  20110908_103940WIPMPRAGESENSEs401a1004.hdr  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134440875_28_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134448937_8_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134509234_40_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134510875_16_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134538671_22_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134544031_75_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134613328_120_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134627468_83_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134638328_148_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134705031_38_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134709953_87_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134710093_152_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134712562_19_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134753390_139_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134905531_163_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134920328_5_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915134941031_164_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135104265_112_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135105421_93_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135105593_73_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135107406_61_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135133515_18_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135211750_133_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135403281_48_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135429734_137_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135436015_157_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135442718_20_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135444312_70_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135503468_27_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135520609_167_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135520750_110_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135543203_89_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135552187_59_S122024_I255978.dcm  ADNI_031_S_4218_MR_MPRAGE_br_raw_20110915135611171_160_S122024_I255978.dcm  (+56 more)
